Bug 275746 - Marble for maemo generate wrong KML file
Summary: Marble for maemo generate wrong KML file
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: 1.1.0
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-15 18:18 UTC by Hugh Chen
Modified: 2011-09-26 20:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot opening same KML with marble desktop and google earth (244.34 KB, image/jpeg)
2011-06-15 18:23 UTC, Hugh Chen
Details
KML file generated by Marble on maemo (104.14 KB, application/octet-stream)
2011-06-17 03:08 UTC, Hugh Chen
Details
Deep zooming-in to check marble-generated KML in google earth (239.93 KB, image/jpeg)
2011-06-17 03:10 UTC, Hugh Chen
Details
KML file display correctly in google earth after removing first couple track points (217.15 KB, image/jpeg)
2011-06-17 03:35 UTC, Hugh Chen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hugh Chen 2011-06-15 18:18:44 UTC
When I open the KML file generated by marble on maemo with marble desktop,there're no problems. However,when I try to open the same KML file with google earth,the track is totally different from what it looks on marble desktop. pls see attached screenshot for comparison.
Comment 1 Hugh Chen 2011-06-15 18:23:24 UTC
Created attachment 61024 [details]
Screenshot opening same KML with marble desktop and google earth
Comment 2 Torsten Rahn 2011-06-16 18:20:45 UTC
Hi, thanks for reporting this bug. Some initial thoughts:

- Could you provide the generated KML for debugging?

- Does Google Earth really just render a straight line? Or does the rendering otherwise continue in Hongkong just like in Marble? In that case I suspect that there is an initial node prepended that Marble doesn't render which is rendered in Google Earth.
Comment 3 Hugh Chen 2011-06-17 03:06:57 UTC
- Generated KML attached
- I opened the track in google earth again and zoom in to check,you're right. It looks like Marble ignore the first and the last couple of track points but google earth will not. That's why the track looks different but I don't know how to fix it.  I also attach the screenshot for your reference. It may help.
Comment 4 Hugh Chen 2011-06-17 03:08:34 UTC
Created attachment 61066 [details]
KML file generated by Marble on maemo
Comment 5 Hugh Chen 2011-06-17 03:10:06 UTC
Created attachment 61067 [details]
Deep zooming-in to check marble-generated KML in google earth
Comment 6 Hugh Chen 2011-06-17 03:33:34 UTC
Ok,I dived into the generated KML file and removed the first couple of track points whose coords looks very similar and opened it in google earth again. Guess what! The track display correctly(see attach). So question is why does Marble save these track points in the KML file and ignore them when opening the file? Seems Marble is tolerant for some problem KML files but others not.
Comment 7 Hugh Chen 2011-06-17 03:35:38 UTC
Created attachment 61069 [details]
KML file display correctly in google earth after removing first couple track points
Comment 8 Thibaut Gridel 2011-06-21 19:23:40 UTC
One possible culprit is the fact that we record initial track positions irrelevant of their quality (for instance in n900, initial positions are quick to arrive but way off the exact position).

A point to take also is we wouldn't zoom out to the extent of the track while opening the file (yet).

Points for improvements:
- zoom to file extents (the last point to close bug #)
- do not save track points with bad quality, taking into account indicators like hdop, vdop, accuracy indicators... )
Comment 9 Thibaut Gridel 2011-09-11 22:06:48 UTC
Git commit 5f34651b2f1e28d053324936d181503898ee0f5d by Thibaut Gridel.
Committed on 11/09/2011 at 15:53.
Pushed by tgridel into branch 'master'.

PositionTracking: only keep detailed level accuracy positions

BUG: 275746

M  +5    -4    src/lib/PositionTracking.cpp

http://commits.kde.org/marble/5f34651b2f1e28d053324936d181503898ee0f5d
Comment 10 Thibaut Gridel 2011-09-26 20:50:55 UTC
Git commit 64ca5a73c965812558ba88072fbbd16692ba645b by Thibaut GRIDEL.
Committed on 26/09/2011 at 22:31.
Pushed by tgridel into branch 'KDE/4.7'.

PositionTracking: only keep detailed level accuracy positions

BUG: 275746
(cherry picked from commit 5f34651b2f1e28d053324936d181503898ee0f5d)

M  +5    -4    src/lib/PositionTracking.cpp

http://commits.kde.org/marble/64ca5a73c965812558ba88072fbbd16692ba645b