PositionTracking: only keep detailed level accuracy positions

BUG: 275746
(cherry picked from commit 5f34651b2f1e28d053324936d181503898ee0f5d)